# Data-Usage

./: README.md  pyproject.toml
data/interim/: README.txt
data/interim/.ipynb_checkpoints/: grouping_ids-checkpoint.csv  hrdataupdate-checkpoint.csv
data/interim/2022_1/grouping_ids/: grouping_ids_2022_1_19.csv
data/proceed/: README.txt
data/raw/: README.txt
data/report/: README.txt
data/snapshot/: README.txt
helper/: columns.py
notebooks/batch_mode/: data_usage_batchmode.ipynb
notebooks/predictors/.ipynb_checkpoints/: HRAnalysis-checkpoint.ipynb  data_usage-checkpoint.ipynb
src/predictors/: data_usage_predictors.py
utils/: .env  __init__.py  cutoff_date.py  eample.env
utils/.ipynb_checkpoints/: database_connector-checkpoint.py  file_helper-checkpoint.py  filters-checkpoint.py  query_template-checkpoint.py
